# ais

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: bump.sh
.github/workflows/: package-version-patch-bump.yml  python-package-deploy.yml  python-package-test.yml
src/ais_analyzer/: __main__.py  ais.py  ais_data_container.py  my_ais_cli.py  my_ais_handler.py  requirements.txt  std_all_portcalls.csv
src/ais_analyzer/commands/: portcalls.py  statistics.py
src/ais_analyzer/commands/statistics_data/: mmsi_country.py  mmsikos.xlsx  move_to_py.py
src/ais_analyzer/handlers/: cli_handler.py  input_handler.py  output_handler.py  values.py
src/ais_analyzer/logger/: log_class.py  log_init.py  memory_log.py  time_log.py
src/ais_naval/: ais.py
tests/: conftest.py  reference.py  test_ais_cli.py  test_ais_data_container.py  test_ais_data_handler.py  test_input_handler.py  test_portcalls.py  test_reference.py  test_statistics.py
tests/data/: 2_vessels_v1_4occurances_v2_3occurances.csv  30_sec_gap_same_vessel.csv  LICENCE_NORWEGIAN_DATA  README.md  ais_test_data_10_rader_mongstad.csv  dk_2_vessels_v1_2occurances_v2_4occurances.csv  dk_test_data_10k_rows.csv  duplicate_rows.csv  no_test_data_vestland_10k_rows.csv  same_vessle_1sec_increments.csv  std_all_portcalls.csv  std_double_portcall.csv  std_no_portcall.csv  std_single_portcall.csv  std_statistics_test.csv  std_test_portcalls.csv
